--- a/notebooks/practice_00.ipynb
+++ b/notebooks/practice_00.ipynb
@@ -15,23 +15,26 @@
    "id": "b4bf0adc",
    "metadata": {},
    "source": [
-    "## Theory:\n",
+    "### Theory in short\n",
     "\n",
-    "We will use a linear model. First, we initialize the parameters **W** and **b** of our model.\n",
+    "Remember, a neuron is just a linear model with the parameters **W** and **b** that we need to optimize.\n",
     "\n",
-    "Then, we define an iterative algorithm that loops through the following steps:\n",
+    "After initializing these parameters, we define a loop to find these optimal parameters.\n",
     "\n",
     "1. **Model Function**  \n",
-    "   This function represents our artificial neuron's behavior. It includes the linear transformation and an activation function. Here, we use the **sigmoid activation function** to introduce non-linearity.\n",
+    "   This function represents our artificial neuron's behavior. It includes the linear transformation and an activation function.\n",
     "\n",
     "2. **Cost Function**  \n",
-    "   This function evaluates the performance of our model by comparing its output to the ground truth labels **y**. We use the **log loss** (logarithmic loss) function to measure this difference.\n",
+    "   The cost function evaluates how well the model's predictions match the ground truth **labels `y`**.\n",
     "\n",
     "3. **Gradients Function**  \n",
-    "   This function computes the gradients of the cost with respect to the model's parameters. These gradients indicate how each parameter influences the model's error. The objective is to use this information to move the parameters in the direction that reduces the cost.\n",
+    "   This function computes the gradients of the cost with respect to the model's parameters (**W** and **b**). These gradients tell us how to **adjust the parameters** to reduce the cost\n",
     "\n",
     "4. **Update Function**  \n",
-    "   This function slightly adjusts the model parameters using the previously computed gradients. The goal is to iteratively approach the optimal parameter set that minimizes the cost function.\n"
+    "   This function slightly adjusts the model parameters using the previously computed gradients.\n",
+    "\n",
+    "By repeating these steps, the model gradually **learns** the optimal parameters that minimize the cost.\n",
+    "\n"
    ]
   },
   {
@@ -39,7 +42,7 @@
    "id": "2736234e",
    "metadata": {},
    "source": [
-    "> This is the **generic architecture** for training a neural network : All neural networks in the world follow this same kind of procedure."
+    "> This is the **generic architecture** for training a neural network : All neural networks in the world follow this same kind of procedure. From neurons to the most advanced architectures."
    ]
   },
   {
@@ -51,9 +54,13 @@
     "\n",
     "When coding, don't get stuck on the details of the implementation. You can do your own research to understand the libraries if you wish. But the goal isn't to know to code. The goal is to understand what tools we use to code and why we use them.\n",
     "\n",
-    "For example, just beneath, I import **numpy** as np to create arrays, **matplotlib** as plt to display graphs, and I use **sklearn** to create a dataset. Each time I call mp or plt, it gives me a set of pre-coded methods I can use as I want. Don't be scared of the libraries, don't be scared of the code, don't be scared if you don't know exactly how it works. For some libraries I use, I don't know how they work either. But I know what they do and why I use them. That's the most important thing.\n",
+    "For example, just beneath, I import **numpy** as np to create arrays, **matplotlib** as plt to display graphs, and I use **sklearn** to create a dataset. Each time I call np or plt, it gives me a set of pre-coded methods I can use as I want. \n",
     "\n",
-    "Keep that in mind, and go through the fire."
+    "Don't be scared of the libraries, don't be scared of the code, don't be scared if you don't know exactly how it works. For some libraries I use, I don't know how they work either. But I know what they do and why I use them. That's the most important thing.\n",
+    "\n",
+    "Keep that in mind, and go through the fire.\n",
+    "\n",
+    "## Let's funking code."
    ]
   },
   {
@@ -72,20 +79,48 @@
   },
   {
    "cell_type": "markdown",
+   "id": "dd69ae31",
+   "metadata": {},
+   "source": [
+    "## Let's define all the functions we need to create our first artificial neuron."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "40ffe64e",
    "metadata": {},
    "source": [
-    "Let's funking code.\n",
+    "### Getting Started: The Dataset\n",
     "\n",
-    "We generate a dataset of 100 points.  \n",
+    "Before we can do anything in deep learning, we need **data**.\n",
     "\n",
-    "Each point has two coordinates (x1, x2), and is assigned a class label.  \n",
-    "For now, you can think of the class as the ground truth.\n",
+    "In real-world jobs, datasets usually come from domain experts, research studies, or production systems.  \n",
+    "But here, we'll **generate a simple dataset of 100 points** for practice.\n",
     "\n",
-    "`X` contains the input data (each input x = (x1, x2))  \n",
-    "`y` contains the target values = ground truth\n",
+    "Each data point is defined by **two features**:\n",
+    "  $\n",
+    "  x = (x_1, x_2)\n",
+    "  $\n",
     "\n",
-    "Each input `x` has its corresponding class label `y`.\n"
+    "Each data point is assigned a **class label** — this is the **ground truth** we want our model to learn.\n",
+    "\n",
+    "- `X` → the **input data**, which contains all the $(x_1, x_2)$ pairs  \n",
+    "- `y` → the **target values**, or the true class labels for each input\n",
+    "\n",
+    "For every input `x` in `X`, there is a corresponding label `y` in `y`.\n",
+    "\n",
+    "> Think of it like this:  \n",
+    "> - `X` = the questions (data points)  \n",
+    "> - `y` = the correct answers (class labels)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21909593",
+   "metadata": {},
+   "source": [
+    "For the plant dataset, we have two classes: **0** and **1** for non-toxic and toxic plants, respectively.\\\n",
+    "And the two features $(x_1, x_2)$ are for the **length** and **width** of the leaves of each plant."
    ]
   },
   {
@@ -130,11 +165,20 @@
    "id": "3157482f",
    "metadata": {},
    "source": [
-    "Now we will create an initialization function to properly initialize the parameters W and b of our linear model.\n",
+    "### Initialization\n",
     "\n",
-    "Since the input x can have multiple dimensions (e.g., x = (x1, x2, ..., xn)), the parameter W needs to adapt to the size of x in order to influence each component of the input.\n",
+    "Now we will create an **initialization function** to properly initialize the parameters **$W$** and **$b$** of our linear model.\n",
     "\n",
-    "Here, X has 2 dimensions since we can represent the input data on two axes: X = (x1, x2)"
+    "The parameter **$W$** must be shaped accordingly — it needs to **interact with each component** of the input.\n",
+    "\n",
+    "The bias **$b$** is a simple number added after the linear transformation, no big deal.\n",
+    "\n",
+    "Here, the input **$X$** has **2 dimensions**, meaning we can represent each data point on two axes:  \n",
+    "$X = (x_1, x_2)$\n",
+    "\n",
+    "So:\n",
+    "- **$W$** should be a 2D vector (with 2 components)\n",
+    "- **$b$** is a number\n"
    ]
   },
   {
@@ -169,7 +213,12 @@
    "id": "48cec0c3",
    "metadata": {},
    "source": [
-    "We see that W is a vector with 2 rows (matching the input dimension) and 1 column, and b is a single real number."
+    "We see that:\n",
+    "\n",
+    "- **$W$** is a **vector with 2 rows and 1 column**, it has shape **(2, 1)**  \n",
+    "  This matches the input dimension of $x = (x_1, x_2)$\n",
+    "\n",
+    "- **$b$** is a **single real number**, it has shape **(1,)**  "
    ]
   },
   {
@@ -177,7 +226,9 @@
    "id": "3c0cf7c7",
    "metadata": {},
    "source": [
-    "Now let's code the model of our neuron. The question we're answering is: **how does the neuron process the information it receives?**\n",
+    "### The Model: Neuron Behavior\n",
+    "\n",
+    "The core of our neuron. The question we're answering is: **how does the neuron process the information it receives?**\n",
     "\n",
     "**A neuron processes the input linearly**, but we add intelligence through a **non-linear activation function** : The neuron will \"activate\" based on this non-linear rule."
    ]
@@ -187,7 +238,7 @@
    "id": "9e4f55f7",
    "metadata": {},
    "source": [
-    "So let $Z = W * X + b$ be the linear transformation of the input data and $A = \\sigma(Z)$ be the activation function."
+    "So let $Z = W * X + b$ be the linear transformation of the input data and $A = \\text{sigmoid}(Z)$ be the activation function."
    ]
   },
   {
@@ -219,9 +270,9 @@
    "id": "6a42f32c",
    "metadata": {},
    "source": [
-    "We now define the cost function: **Log Loss**\n",
+    "### Cost Function: Log Loss\n",
     "\n",
-    "This function returns a real number that quantifies the error between the model's prediction and the actual target.\n"
+    "This cost function called log-loss returns a real number that quantifies the error between the model's prediction and the actual target.\n"
    ]
   },
   {
@@ -253,7 +304,7 @@
    "id": "730d75d5",
    "metadata": {},
    "source": [
-    "We have a real number, great."
+    "We have a real number, great. This  number is **the average prediction error**. Our goal is to **minimize** this value during training."
    ]
   },
   {
@@ -261,7 +312,19 @@
    "id": "63dea788",
    "metadata": {},
    "source": [
-    "Now we handle the gradients: this gives us the infinitesimal direction in which we should move to minimize the cost function.\n"
+    "### Gradients\n",
+    "\n",
+    "Now we handle the **gradients**.\n",
+    "\n",
+    "Gradients give us the **direction and rate of change** of the cost function with respect to the parameters $W$ and $b$.\n",
+    "\n",
+    "They tell us **how to adjust** each parameter to **reduce the cost** — that's the essence of learning.\n",
+    "\n",
+    "We'll compute:\n",
+    "- $\\frac{\\partial \\mathcal{L}}{\\partial W}$\n",
+    "- $\\frac{\\partial \\mathcal{L}}{\\partial b}$\n",
+    "\n",
+    "These will be used in the next step to update the model.\n"
    ]
   },
   {
@@ -298,16 +361,27 @@
    "id": "49df6a0c",
    "metadata": {},
    "source": [
-    "We still have the two-dimensional vector $W$ and the real number $b$."
+    "We still have the two-dimensional vector $W$ and the real number $b$, the dimensions are respected."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2ce9009b",
+   "id": "9351ad45",
    "metadata": {},
    "source": [
-    "Now that we have the direction (gradients), we update the model parameters by moving slightly in that direction.  \n",
-    "This helps the model gradually approach the best set of parameters (the ones that minimize the cost function).\n"
+    "### Parameter Update\n",
+    "\n",
+    "Now that we have the **direction** (gradients), we update the model parameters.\n",
+    "\n",
+    "We move the parameters **slightly in the direction that reduces the cost** — this is the principle of **gradient descent**.\n",
+    "\n",
+    "Update rules:\n",
+    "- $W = W - \\alpha \\cdot \\frac{\\partial \\mathcal{L}}{\\partial W}$\n",
+    "- $b = b - \\alpha \\cdot \\frac{\\partial \\mathcal{L}}{\\partial b}$\n",
+    "\n",
+    "Here, $\\alpha$ is the **learning rate** — it controls how big each update step is.\n",
+    "\n",
+    "By repeating this process, the model gradually finds better parameters.\n"
    ]
   },
   {
@@ -350,9 +424,24 @@
    "id": "2c3b58e4",
    "metadata": {},
    "source": [
-    "Now we bring all these functions together into a single architecture.\n",
+    "### Training Loop: Putting It All Together\n",
     "\n",
-    "This is where learning happens: we provide only the inputs `X` and the ground truth `y` as inputs to the function.\n"
+    "Now we bring all the previous functions together into a single **training architecture**.\n",
+    "\n",
+    "This is where **learning** happens.\n",
+    "\n",
+    "We only provide:\n",
+    "- the inputs `X`\n",
+    "- the ground truth labels `y`\n",
+    "\n",
+    "The function handles:\n",
+    "1. Initialization of $(W, b)$  \n",
+    "2. model prediction\n",
+    "3. Cost computation  \n",
+    "4. Gradient calculation  \n",
+    "5. Parameter updates (using learning rate)  \n",
+    "\n",
+    "This process is repeated over multiple iterations to train the model.\n"
    ]
   },
   {
