--- a/notebooks/practice_01.ipynb
+++ b/notebooks/practice_01.ipynb
@@ -44,7 +44,8 @@
     "import matplotlib.pyplot as plt\n",
     "import nbimporter\n",
     "from utilities import *\n",
-    "from practice_00 import artificial_neuron, initialisation, model, gradients, update, predict, accuracy_score\n",
+    "from practice_00 import artificial_neuron, initialisation, model, gradients,\n",
+    "                        update, predict, accuracy_score\n",
     "from sklearn.metrics import accuracy_score"
    ]
   },
@@ -278,7 +279,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train_reshape = X_train.reshape(X_train.shape[0], X_train.shape[1] * X_train.shape[2])"
+    "X_train_reshape = X_train.reshape(X_train.shape[0], \n",
+    "                                  X_train.shape[1] * X_train.shape[2])"
    ]
   },
   {
@@ -414,7 +416,8 @@
     "def log_loss(A, y):\n",
     "    m = len(y)\n",
     "    epsilon = 10e-15\n",
-    "    loss = -1/m * np.sum(y * np.log(A + epsilon) + (1 - y) * np.log(1 - A + epsilon))\n",
+    "    loss = -1/m * np.sum(y * np.log(A + epsilon) \n",
+    "                 + (1 - y) * np.log(1 - A + epsilon))\n",
     "    return loss\n",
     "\n",
     "def predict(X, W, b):\n",
