--- a/notebooks/practice_02.ipynb
+++ b/notebooks/practice_02.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "f9168688",
    "metadata": {},
    "outputs": [],
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "fb01123f",
    "metadata": {},
    "outputs": [
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "058451ec",
    "metadata": {},
    "outputs": [],
@@ -288,12 +288,12 @@
     "    # n2 is the output dimension — number of neurons in the output layer\n",
     "\n",
     "    # First layer: adapt to the input data\n",
-    "    W1 = np.random.randn(n1, n0)  # weights from input (n0) to first layer (n1)\n",
-    "    b1 = np.random.randn(n1, 1)   # bias vector for first layer (one bias per neuron)\n",
+    "    W1 = np.random.randn(n1, n0)# weights from input (n0) to first layer (n1)\n",
+    "    b1 = np.random.randn(n1, 1) # bias vector for first layer (one bias per neuron)\n",
     "\n",
     "    # Second layer: adapt to the first layer\n",
-    "    W2 = np.random.randn(n2, n1)  # weights from first layer (n1) to output layer (n2)\n",
-    "    b2 = np.random.randn(n2, 1)   # bias vector for output layer (one bias per neuron)\n",
+    "    W2 = np.random.randn(n2, n1)# weights from first layer(n1) to output layer(n2)\n",
+    "    b2 = np.random.randn(n2, 1) # bias vectors for output layer\n",
     "\n",
     "    # Bundle everything into a dictionary — it's cleaner and easy to manage\n",
     "    parameters = {\n",
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "66707bf6",
    "metadata": {},
    "outputs": [],
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "7c8260f1",
    "metadata": {},
    "outputs": [],
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "0845b9a5",
    "metadata": {},
    "outputs": [],
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "d3f10869",
    "metadata": {},
    "outputs": [],
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "3e5575dc",
    "metadata": {},
    "outputs": [],
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "f95e2c81",
    "metadata": {},
    "outputs": [],
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "425d8454",
    "metadata": {},
    "outputs": [],
@@ -619,10 +619,10 @@
     "    for i in tqdm(range(epoch)):\n",
     "        # Forward propagation to get activations\n",
     "        activations = forward_propagation(X, parameters)\n",
-    "        A2 = activations['A2']  # the target activation, the output of the network\n",
+    "        A2 = activations['A2']  # the target activation, the output of the network.\n",
     "\n",
     "        # Compute the cost with the log_loss loss function\n",
-    "        # the loss is a number, not a vector or a matrix, so we use flatten() to convert it from a 2D array to a 1D array\n",
+    "# the loss is a number not a matrix: flatten() converts a matrix to a number\n",
     "        loss = log_loss(y.flatten(), A2.flatten())\n",
     "        # Store it im the training loss list for plotting\n",
     "        train_loss.append(loss)\n",
@@ -631,7 +631,7 @@
     "        y_pred = predict(X, parameters)\n",
     "\n",
     "        # Compute accuracy\n",
-    "        # the accuracy is a number, not a vector or a matrix, so we use flatten() to convert it from a 2D array to a 1D array\n",
+    "# the accuracy is a number not a matrix: flatten()\n",
     "        accuracy = accuracy_score(y.flatten(), y_pred.flatten())\n",
     "\n",
     "        # Store it in the training accuracy list for plotting\n",
@@ -640,7 +640,7 @@
     "        # Save current state (optional, can be used for analysis/animation)\n",
     "        history.append([parameters.copy(), train_loss, train_acc, i])\n",
     "\n",
-    "        # Backward propagation to get gradients = the direction to update the parameters\n",
+    "        # Backward propagation to get gradients: direction to update the parameters\n",
     "        gradients = back_propagation(X, y, parameters, activations)\n",
     "\n",
     "        # Update parameters using gradient descent\n",
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "171355e9",
    "metadata": {},
    "outputs": [],
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "65b161ae",
    "metadata": {},
    "outputs": [],
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "1d4988ed",
    "metadata": {},
    "outputs": [
@@ -712,7 +712,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:00<00:00, 1704.45it/s]\n"
+      "100%|██████████| 1000/1000 [00:00<00:00, 1754.75it/s]\n"
      ]
     },
     {
@@ -802,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "c2d416ce",
    "metadata": {},
    "outputs": [
@@ -836,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "e6bbffe2",
    "metadata": {},
    "outputs": [
@@ -844,7 +844,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 400/400 [00:00<00:00, 1561.29it/s]\n"
+      "100%|██████████| 400/400 [00:00<00:00, 1582.86it/s]\n"
      ]
     },
     {
@@ -887,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "f0092d30",
    "metadata": {},
    "outputs": [
@@ -895,7 +895,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 400/400 [00:00<00:00, 1455.26it/s]\n"
+      "100%|██████████| 400/400 [00:00<00:00, 1434.10it/s]\n"
      ]
     },
     {
@@ -920,7 +920,8 @@
     }
    ],
    "source": [
-    "param_64, train_loss, train_acc, history = neural_network(X, y, n1=64, learning_rate=0.1, epoch=400)\n",
+    "param_64, train_loss, train_acc, history = neural_network(X, y, n1=64, \n",
+    "                                            learning_rate=0.1, epoch=400)\n",
     "plot_loss_acc(train_loss, train_acc)\n",
     "plot_decision_boundary(X, y, param_64)\n"
    ]
@@ -935,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "1d26ac6a",
    "metadata": {},
    "outputs": [],
@@ -952,7 +953,8 @@
     "    for i, n1 in enumerate(neurons_list):\n",
     "        for j, lr in enumerate(lr_list):\n",
     "            # Train the neural network with current hyperparameters\n",
-    "            parameters, _, _, _ = neural_network(X, y, n1=n1, learning_rate=lr, epoch=epoch)\n",
+    "            parameters, _, _, _ = neural_network(X, y, n1=n1, \n",
+    "                                        learning_rate=lr, epoch=epoch)\n",
     "\n",
     "            # Create grid for decision boundary\n",
     "            x_min, x_max = X[0, :].min() - 1, X[0, :].max() + 1\n",
@@ -980,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "3ea3a48c",
    "metadata": {},
    "outputs": [
@@ -988,21 +990,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:00<00:00, 2001.21it/s]\n",
-      "100%|██████████| 1000/1000 [00:00<00:00, 1767.16it/s]\n",
-      "100%|██████████| 1000/1000 [00:00<00:00, 1726.60it/s]\n",
-      "100%|██████████| 1000/1000 [00:00<00:00, 1778.06it/s]\n",
-      "100%|██████████| 1000/1000 [00:00<00:00, 1713.26it/s]\n",
-      "100%|██████████| 1000/1000 [00:00<00:00, 1850.67it/s]\n",
-      "100%|██████████| 1000/1000 [00:00<00:00, 1813.28it/s]\n",
-      "100%|██████████| 1000/1000 [00:00<00:00, 1602.34it/s]\n",
-      "100%|██████████| 1000/1000 [00:00<00:00, 1671.09it/s]\n",
-      "100%|██████████| 1000/1000 [00:00<00:00, 1868.33it/s]\n",
-      "100%|██████████| 1000/1000 [00:00<00:00, 1728.40it/s]\n",
-      "100%|██████████| 1000/1000 [00:00<00:00, 1768.83it/s]\n",
-      "100%|██████████| 1000/1000 [00:00<00:00, 1665.68it/s]\n",
-      "100%|██████████| 1000/1000 [00:00<00:00, 1760.09it/s]\n",
-      "100%|██████████| 1000/1000 [00:00<00:00, 1885.37it/s]\n"
+      "100%|██████████| 1000/1000 [00:00<00:00, 1905.22it/s]\n",
+      "100%|██████████| 1000/1000 [00:00<00:00, 1523.91it/s]\n",
+      "100%|██████████| 1000/1000 [00:00<00:00, 1680.85it/s]\n",
+      "100%|██████████| 1000/1000 [00:00<00:00, 1630.42it/s]\n",
+      "100%|██████████| 1000/1000 [00:00<00:00, 1663.77it/s]\n",
+      "100%|██████████| 1000/1000 [00:00<00:00, 1840.00it/s]\n",
+      "100%|██████████| 1000/1000 [00:00<00:00, 1776.62it/s]\n",
+      "100%|██████████| 1000/1000 [00:00<00:00, 1708.32it/s]\n",
+      "100%|██████████| 1000/1000 [00:00<00:00, 1739.63it/s]\n",
+      "100%|██████████| 1000/1000 [00:00<00:00, 1710.93it/s]\n",
+      "100%|██████████| 1000/1000 [00:00<00:00, 1549.37it/s]\n",
+      "100%|██████████| 1000/1000 [00:00<00:00, 1689.79it/s]\n",
+      "100%|██████████| 1000/1000 [00:00<00:00, 1744.82it/s]\n",
+      "100%|██████████| 1000/1000 [00:00<00:00, 1740.89it/s]\n",
+      "100%|██████████| 1000/1000 [00:00<00:00, 1602.07it/s]\n"
      ]
     },
     {
@@ -1112,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "8b33e44a",
    "metadata": {},
    "outputs": [],
@@ -1136,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "560e5d75",
    "metadata": {},
    "outputs": [
@@ -1173,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "9c509236",
    "metadata": {},
    "outputs": [
@@ -1183,7 +1185,7 @@
        "((1000, 64, 64), (1000, 1), (200, 64, 64), (200, 1))"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1204,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "4d064221",
    "metadata": {},
    "outputs": [
@@ -1214,7 +1216,7 @@
        "((64, 64, 1000), (64, 64, 200))"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1229,7 +1231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "cc57aa2c",
    "metadata": {},
    "outputs": [
@@ -1239,7 +1241,7 @@
        "((4096, 1000), (4096, 200))"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1264,7 +1266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "32e3f9aa",
    "metadata": {},
    "outputs": [
@@ -1274,7 +1276,7 @@
        "((1000, 1), (200, 1))"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1285,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "f0aae39c",
    "metadata": {},
    "outputs": [],
@@ -1308,7 +1310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "4a4e7ad5",
    "metadata": {},
    "outputs": [],
@@ -1341,20 +1343,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "58d5c7bc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def neural_network2(X_train, y_train, X_test, y_test, n1=32, learning_rate=0.1, epoch=1000):\n",
+    "def neural_network2(X_train, y_train, X_test, y_test, n1=32, \n",
+    "                    learning_rate=0.1, epoch=1000):\n",
     "    def log_loss(A, y):\n",
     "        m = len(y)\n",
     "        epsilon = 1e-15\n",
-    "        return -1/m * np.sum(y * np.log(A + epsilon) + (1 - y) * np.log(1 - A + epsilon))\n",
+    "        return -1/m * np.sum(y * np.log(A + epsilon) + \n",
+    "                       (1 - y) * np.log(1 - A + epsilon))\n",
     "\n",
     "    # Dimensions\n",
     "    n0 = X_train.shape[0]  # input dimension\n",
-    "    n2 = y_train.shape[1]  # output dimension (binary classification again between cats and dogs)\n",
+    "    n2 = y_train.shape[1]  # output dimension (binary classification again,\n",
+    "                           #                        between cats and dogs)\n",
     "\n",
     "    # Init\n",
     "    np.random.seed(0)\n",
@@ -1384,7 +1389,6 @@
     "            train_acc.append(accuracy_score(y_train, y_pred))\n",
     "\n",
     "            # Test\n",
-    "            \n",
     "            activations_test = forward_propagation(X_test, parameters)\n",
     "            A2_test = activations_test['A2'].flatten()\n",
     "                # Loss\n",
@@ -1425,7 +1429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "2fdf9e07",
    "metadata": {},
    "outputs": [
@@ -1433,14 +1437,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/10000 [00:00<?, ?it/s]"
+      "  0%|          | 4/10000 [00:00<18:16,  9.11it/s]"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10000/10000 [03:59<00:00, 41.79it/s]\n"
+      "100%|██████████| 10000/10000 [04:07<00:00, 40.43it/s]\n"
      ]
     },
     {
@@ -1455,7 +1459,8 @@
     }
    ],
    "source": [
-    "parameters = neural_network2(X_train_reshaped, y_train, X_test_reshaped, y_test, n1=64, learning_rate=0.1, epoch=10000)"
+    "parameters = neural_network2(X_train_reshaped, y_train, X_test_reshaped, y_test, \n",
+    "                             n1=64, learning_rate=0.1, epoch=10000)"
    ]
   },
   {
