--- a/notebooks/practice_03.ipynb
+++ b/notebooks/practice_03.ipynb
@@ -127,10 +127,12 @@
     "\n",
     "    # Loop through each layer starting from 1 (layer 0 is the input layer)\n",
     "    for l in range(1, L):\n",
-    "        # Initialize weights with random values: shape (neurons in current layer, neurons in previous layer)\n",
+    "        # Initialize weights with random values: \n",
+    "        # shape (neurons in current layer, neurons in previous layer)\n",
     "        parameters[f'W{l}'] = np.random.randn(dimensions[l], dimensions[l-1])\n",
     "\n",
-    "        # Initialize biases with random values: shape (neurons in current layer, 1)\n",
+    "        # Initialize biases with random values: \n",
+    "        # shape (neurons in current layer, 1)\n",
     "        parameters[f'b{l}'] = np.random.randn(dimensions[l], 1)\n",
     "\n",
     "    # Return the dictionary containing all parameters\n",
@@ -504,8 +506,8 @@
     "def update(gradients, parameters, learning_rate):\n",
     "    L = len(parameters) // 2\n",
     "    for l in range(1, L):\n",
-    "        parameters[f'W{l}'] = parameters[f'W{l}'] - learning_rate * gradients[f'dW{l}']\n",
-    "        parameters[f'b{l}'] = parameters[f'b{l}'] - learning_rate * gradients[f'db{l}']\n",
+    "        parameters[f'W{l}']=parameters[f'W{l}'] - learning_rate * gradients[f'dW{l}']\n",
+    "        parameters[f'b{l}']=parameters[f'b{l}'] - learning_rate * gradients[f'db{l}']\n",
     "\n",
     "    return parameters"
    ]
@@ -525,7 +527,7 @@
    "id": "85de7e91",
    "metadata": {},
    "source": [
-    "Let's quickly code the prediction function, to check if our neural network is able to predict the right label for a given input."
+    "Now that we've updated the parameters, let's quickly code the prediction function, to check if our neural network is able to predict the right label for a given input. It is the same as always guys. (remember why ?)"
    ]
   },
   {
@@ -558,7 +560,7 @@
    "id": "d4482af3",
    "metadata": {},
    "source": [
-    "We have everything to build the `neural network` function."
+    "OK we have everything to build the `neural network` function."
    ]
   },
   {
@@ -599,12 +601,16 @@
     "        activations = forward_propagation(X, parameters)\n",
     "        # compare the output data: the last activation, to the ground truth y\n",
     "        train_loss.append(log_loss(y.flatten(), activations[f'A{L}'].flatten()))\n",
-    "        train_acc.append(accuracy_score(y.flatten(), predict(X, parameters).flatten()))\n",
+    "        # make the predictions with these parameters\n",
+    "        predictions = predict(X, parameters)\n",
+    "        # compare the predictions to the ground truth y\n",
+    "        train_acc.append(accuracy_score(y.flatten(), predictions.flatten()))\n",
+    "        # compute the gradients accordingly\n",
     "        gradients = back_propagation(y, parameters, activations)\n",
+    "        # update the parameters with these gradients\n",
     "        parameters = update(gradients, parameters, learning_rate)\n",
     "\n",
-    "    # Ploting the curves\n",
-    "    # - learning curve (loss) and accuracy\n",
+    "    # Ploting the curves (loss and accuracy)\n",
     "    plt.figure(figsize=(12, 4))\n",
     "    plt.subplot(1, 2, 1)\n",
     "    plt.plot(train_loss, label='Train Loss')\n",
@@ -1024,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "58e25736",
    "metadata": {},
    "outputs": [],
@@ -1045,22 +1051,25 @@
     "        activations = forward_propagation(X_train, parameters)\n",
     "\n",
     "        if i % 100 == 0:\n",
-    "            # Train\n",
+    "            # TRAINING\n",
     "            # compare the output data: the last activation, to the ground truth y\n",
     "            train_loss.append(log_loss(y_train.flatten(), activations[f'A{L}'].flatten()))\n",
-    "            train_acc.append(accuracy_score(y_train.flatten(), predict(X_train, parameters).flatten()))\n",
+    "            predictions = predict(X_train, parameters)\n",
+    "            train_acc.append(accuracy_score(y_train.flatten(), predictions.flatten()))\n",
     "            \n",
     "\n",
-    "            # Test\n",
+    "            # TESTING\n",
+    "            # forward propagation on the test set\n",
     "            activations_test = forward_propagation(X_test, parameters)\n",
+    "            # same step of comparison as above\n",
     "            test_loss.append(log_loss(y_test.flatten(), activations_test[f'A{L}'].flatten()))\n",
-    "            test_acc.append(accuracy_score(y_test.flatten(), predict(X_test, parameters).flatten()))\n",
+    "            predict_test = predict(X_test, parameters)\n",
+    "            test_acc.append(accuracy_score(y_test.flatten(), predict_test.flatten()))\n",
     "        \n",
     "        gradients = back_propagation(y_train, parameters, activations)\n",
     "        parameters = update(gradients, parameters, learning_rate)\n",
     "\n",
-    "    # Ploting the curves\n",
-    "    # - learning curve (loss) and accuracy\n",
+    "    # Ploting the curves (loss and accuracy)\n",
     "    plt.figure(figsize=(12, 4))\n",
     "    plt.subplot(1, 2, 1)\n",
     "    plt.plot(train_loss, label='Train Loss')\n",
