--- a/notebooks/theory_00.ipynb
+++ b/notebooks/theory_00.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "A neural network is... a network of neurons. I am not not joking. A neural network is like a team of decision-makers (neurons), each making a tiny choice based on inputs. Combined, they learn complex patterns — like how you recognize faces or letters.\n",
     "\n",
-    "If a understand how a neuron works, you'll understand how a network of neurons works. So let's first understand how a single neuron works, before understanding how a network of neurons works.\n",
+    "If you understand how a neuron works, you'll understand how a network of neurons works. So let's first understand how a single neuron works, before understanding how a network of neurons works.\n",
     "\n",
     "Honestly, we could stop all the theory here by saying the most important thing in AI:\n",
     "> **A neuron is just a linear function.**\n",
